Using jekyll but kinda without the "posts" feature

--- a/README
+++ b/README
@@ -1,6 +1,11 @@
-Setup
+SETUP
 -----
 
-You must install Redcarpet!:
+    gem install jekyll
+    pip install pygments
 
-    gem install redcarpet
+
+BUILD
+-----
+
+    make
